--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
   <div id="wrapper">
 
-    <section class="info">
+    <section class="infoSection">
+      <h3>更新情報</h3>
       <ul class="infoWrap">
         <li class="infoItem">
           <p class="date">2020/02/01</p>
